--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -5,11 +5,12 @@
 	margin: 0;
 	text-align: center;
 	font-family: "galaxy", Arial, Helvetica, sans-serif;
+	letter-spacing: 3px;
 	color-scheme: light dark;
 	color: rgba(255, 255, 255, 0.87);
 	background-color: #242424;
-	background: linear-gradient(1deg, #190c27, rgb(228, 6, 247), #190c27, rgb(228, 6, 247)) 0% 0% / 400% 400%;
-	animation: 120s ease 0s infinite normal none running CustomAnimation;
+	background: linear-gradient(1deg, #190c27, #9406a0, #190c27, #9406a0) 0% 0% / 400% 400%;
+	animation: 20s ease-in-out 0s infinite normal none running CustomAnimation;
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
@@ -26,6 +27,7 @@
 			background-position: 0% 0%;
 		}
 	}
+	overflow-x: hidden;
 }
 .app {
 	position: absolute;
@@ -37,8 +39,11 @@
 }
 .nav-container {
 	display: flex;
-	justify-content: space-evenly;
+	flex-direction: column;
+	justify-content: space-between;
 	align-items: center;
+	width: 100%;
+	max-width: 1920px;
 }
 .meesh-logo {
 	will-change: filter;
@@ -50,13 +55,22 @@
 .main-nav {
 	display: flex;
 	flex-direction: column;
+	justify-content: space-evenly;
+	margin-top: 10px;
+	height: 80px;
 }
-
+h1 {
+	max-width: 780px;
+}
 a {
 	color: #eee1f2;
+	text-decoration: none;
 }
 a:hover {
 	filter: drop-shadow(0 0 2em #eee1f2);
+}
+p {
+	letter-spacing: 0;
 }
 .vite-logo:hover {
 	filter: drop-shadow(0 0 2em #bd34feaa);
@@ -87,7 +101,7 @@ a:hover {
 	height: 100%;
 }
 .purple-keyboard-container {
-	height: 500px;
+	max-height: 500px;
 }
 .purple-sky {
 	object-fit: contain;
@@ -95,5 +109,5 @@ a:hover {
 	height: 100%;
 }
 .purple-sky-container {
-	height: 500px;
+	max-height: 500px;
 }
