font colour change

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -7,7 +7,7 @@
 	font-family: "galaxy", Arial, Helvetica, sans-serif;
 	letter-spacing: 3px;
 	color-scheme: light dark;
-	color: rgba(255, 255, 255, 0.87);
+	color: #ffffff;
 	background-color: #242424;
 	background: linear-gradient(1deg, #190c27, #9406a0, #190c27, #9406a0) 0% 0% / 400% 400%;
 	animation: 20s ease-in-out 0s infinite normal none running CustomAnimation;
