--- a/src/style/style.css
+++ b/src/style/style.css
@@ -333,6 +333,30 @@ html {
   height: 80px;
 }
 
+.socials-container,
+.main-nav ul {
+  list-style: none;
+  padding: 0;
+}
+
+.social-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+}
+
+.social-icon:hover {
+  background-color: #eee1f2;
+}
+
+.social-image {
+  width: 50%;
+  height: 50%;
+}
+
 h1 {
   max-width: 780px;
 }
